# Rust-code

./: Cargo.toml  README.md
benches/: README.md
data/: p-fs.txt
examples/: README.md
src/: lib.rs  main.rs
tests/: README.md
